# cmsgemos

./: .codecov.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  Makefile  README.md
.ci/: cmsgemos-deploy-key.enc  deploy_eos.sh  docker.sh  generate_release.sh  generate_repo.sh  parse_api_changes.sh  publish_eos.sh  tag2rel.sh  travis.sh
.github/: .gitignore  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: .gitignore  docker.sh  travis.sh
config/: gemostag  mfCommonDefs.mk  mfDefs.gem  mfDefsGEM.mk  mfPythonDefs.gem  mfPythonDefsGEM.mk  mfPythonRPM.mk  mfPythonRPMGEM.mk  mfPythonRPM_gem.rules  mfRPMDefsGEM.mk  mfRPM_gem.rules  mfXaaSDefs.mk  newcernuser.sh  setupMachine.sh
doc/: .gitignore  Makefile  cmsgemos.cfg  cmsgemos.cfg.in  doxyrest-config.lua.in  environment.yml  requirements.txt
doc/source/: changelog.rst  conf.py  faq.rst  index.rst  installing.rst  license.rst  page_index.rst  scripts.rst  support.rst
gemHwMonitor/: Makefile
gemHwMonitor/xml/: gemHwMonitor.xml
gembase/: Makefile
gembase/xml/: entities.ent  gem_conf_tamu_test_split.xml  gembase.xml
gemcalibration/: Makefile
gemcalibration/xml/: gemcalibration.xml
gemdaqmonitor/: Makefile  gemdaqmonitor.md
gemdaqmonitor/xml/: gemmonitor.xml
gemhardware/: Makefile  Makefile.devices  Makefile.managers  Makefile.progress  gemhardware.md
gemhardware/devices/: Makefile
gemhardware/managers/: Makefile
gemhardware/utils/: Makefile
gemhardware/xml/: GEMController.xml  gemsupervisor.xml
gemonlinedb/: .gitignore  Makefile  gemonlinedb.md  parseDef.py
gemonlinedb/defs/: AMC13Configuration.json  AMCConfiguration.json  GBTXConfiguration.json  OHv3Configuration.json  VFAT3ChannelConfiguration.json  VFAT3ChipConfiguration.json
gemonlinedb/schema/: common.xsd
gemonlinedb/test/: testAMC13Configuration.cc  testConfigurationLinker.cc  testConfigurationManager.cc  testFileConfigurationProvider.cc  testFileUtils.cc  testSerializationData.cc  testSystemTopology.cc  testTStoreSerialization.cc  testVFAT3ChannelConfiguration.cc  testVFAT3ChipConfiguration.cc  testXMLBuilder.cc  testXMLConfigurationProvider.cc  testXMLSerialization.cc
gemonlinedb/xml/: AMC_Configuration.xml  OHv3_Configuration.xml  VFAT2_Channel_Configuration.xml  VFAT2_Chip_Configuration.xml  VFAT3_Channel_Configuration.xml  VFAT3_Chip_Configuration.xml  gemonlinedbmanager.xml
gempython/: MANIFEST.in  Makefile  __init__.py  requirements.txt
gempython/pkg/: installrpm.sh  postinstallrpm.sh  setup.cfg  setup.py
gempython/pkg/gempython/: __init__.py
gempython/pkg/gempython/tests/: run_tests_p5.py  test.py
gempython/pkg/gempython/tools/: vfat_user_functions_uhal.py
gempython/pkg/gempython/utils/: nesteddict.py
gempython/tests/: amc13ReadOut.py  amc_info.py  amc_info_uhal.py  ctp7_test.py  getVFATMask.py  glib_board_info_uhal.py  glib_vfat_test_uhal.py  optohybrid_board_info_uhal.py  optohybrid_info_uhal.py  vfat3_info_uhal.py  vfat_info.py  vfat_info_uhal.py  vfat_info_xhal.py  vfat_pulse_setup.py  writeGBTPhase.py
gempython/tools/: amc_user_functions.py  amc_user_functions_uhal.py  amc_user_functions_xhal.py  glib_system_info_uhal.py  glib_user_functions_uhal.py  hw_constants.py  optohybrid_user_functions.py  optohybrid_user_functions_uhal.py  optohybrid_user_functions_xhal.py  scan_utils_uhal.py  vfat_functions_uhal.py  vfat_user_functions_uhal.py  vfat_user_functions_xhal.py
gempython/utils/: gemlogger.py  gemlogging_config.cfg  gracefulKiller.py  nesteddict.py  query.py  rate_calculator.py  registers_uhal.py  registers_xhal.py  standardopts.py  wrappers.py
gemreadout/: Makefile
gemreadout/data/: slot_table.csv
gemsupervisor/: Makefile
gemsupervisor/xml/: GEMGLIBSupervisorWeb.xml  GEMGLIBSupervisorWeb1.xml  GEMGLIBSupervisorWeb_v1.xml  GEMGLIBSupervisorWeb_v2.xml  gemsupervisor.xml  gemsupervisor_ctp7_stress_test.xml  gemsupervisor_tif.xml  gemsupervisor_tif_lemo.xml  testbeamutils.xml  testbeamutils_TAMU.xml  (+1 more)
gemtests/: Makefile
gemutils/: Makefile
gemxaas/: Makefile  buildXaaSProfiles.sh  updateZones.sh
setup/: make_xdaq_softlinks.sh  paths.sh
(+536 files in other folders)
