[metadata]
name = cmsgemos_gempython
# name = gemplotting
author = GEM Online Systems Group
author_email = cms-gem-online-sw@cern.ch
summary = __summary__
license = MIT
description-file = gempython/README.md
home-page = https://cms-gem-daq-project.github.io/cmsgemos
project_urls =
    Documentation = https://cms-gem-daq-project.github.io/cmsgemos
    Source Code   = https://github.com/cms-gem-daq-project/cmsgemos
    Bug Tracker   = https://github.com/cms-gem-daq-project/cmsgemos/issues
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Data Acquisition
    Topic :: Scientific
    Topic :: Utilities
    License :: OSI Approved :: MIT
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python [files]
# scripts = gempython/bin/*.py

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
namespace_packages =
    gempython

packages =
     'gempython.core'
     'gempython.utils'
     'gempython.tools'

data_files =

[entry_points]

[backwards_compat]

[pbr]

[pycodestyle]
exclude=build,lib,.tox,third,*.egg,docs,packages,.eggs

[install]

[bdist_rpm]
requires = python >= 2.6
           django >= 1.9
install_script = installrpm.sh
