[metadata]
name = cmsgemos_gempython
author = GEM Online Systems Group
author_email = cms-gem-online-sw@cern.ch
summary = __summary__
license = MIT
description-file = gempython/README.md
home-page = https://cms-gem-daq-project.github.io/cmsgemos
project_urls =
    Documentation = https://cms-gem-daq-project.github.io/cmsgemos
    Source Code   = https://github.com/cms-gem-daq-project/cmsgemos
    Bug Tracker   = https://github.com/cms-gem-daq-project/cmsgemos/issues
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Data Acquisition
    Topic :: Scientific
    Topic :: Utilities
    License :: OSI Approved :: MIT
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python [files]

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
namespace_packages =
    gempython

packages =
     'gempython.core'
     'gempython.utils'
     'gempython.tools'

data_files =

[entry_points]

[backwards_compat]

[pbr]

[pycodestyle]
exclude=build,lib,.tox,third,*.egg,docs,packages,.eggs

[build]

[build_sphinx]

[install]

[bdist]

[sdist]

[egg_info]

[bdist_rpm]
requires = python >= 2.6
         reg_interface_gem >= 1.0
         cactuscore-uhal-pycohal >= 2.6
         cactusboards-amc13-python >= 1.2

install_script = installrpm.sh
post_install   = postinstallrpm.sh
#   --use-bzip2          use bzip2 instead of gzip to create source distribution
#   --provides           capabilities provided by this package
#   --requires           capabilities required by this package
#   --conflicts          capabilities which conflict with this package
#   --build-requires     capabilities required to build this package
#   --obsoletes          capabilities made obsolete by this package
#   --no-autoreq         do not automatically calculate dependencies
#   --prep-script        Specify a script for the PREP phase of RPM building
#   --build-script       Specify a script for the BUILD phase of RPM building
#   --pre-install        Specify a script for the pre-INSTALL phase of RPM building
#   --install-script     Specify a script for the INSTALL phase of RPM building
#   --post-install       Specify a script for the post-INSTALL phase of RPM building
#   --pre-uninstall      Specify a script for the pre-UNINSTALL phase of RPM building
#   --post-uninstall     Specify a script for the post-UNINSTALL phase of RPM building
#   --clean-script       Specify a script for the CLEAN phase of RPM building
#   --verify-script      Specify a script for the VERIFY phase of the RPM build
